<resources>
    <string name="app_name">2T2019-Localizacion-de-guardias-para-denuncias</string>
    <string name="action_settings">Settings</string>
    <string name="text_nuevoPorAqui">Eres nuevo por aqui?</string>
    <string name="txt_registro">Registrate</string>
    <string name="txt_bienvenida">Bienvenido!</string>
    <string name="txt_mensaje">Es bueno verte de regreso!</string>
    <string name="txtLogin">Login</string>
    <string name="txtApp">Sectrack</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Contraseña</string>
    <string name="imgRetornar">Regresar</string>
    <string name="txtAppObj">Solución efectiva para denunciar delitos!</string>
    <string name="editTextNombres">Nombre</string>
    <string name="editTextApellidos">Apellidos</string>
    <string name="editTextRepPass">Repita su contraseña</string>
    <string name="editTextTelef">Teléfono</string>
    <string name="rBtnUser">Cliente</string>
    <string name="rBtnGuardia">Guardia</string>
    <string name="txtRegistro">Registro de usuario SecTrack</string>
    <string name="txtMensaje">Seleccione el tipo de usuario a crear:</string>
    <string name="txtMensaje2">Ingrese sus datos a continuación:</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="txtMensajeLogin">Ya posees una cuenta?</string>
    <string name="txtIniciaSesion">Inicia sesión</string>
    <string name="title_activity_opciones_app">OpcionesApp</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnLogout">Cerrar Sesion</string>
    <string name="txtPerfilNombre">Nombre</string>
    <string name="txtPerfilApellidos">Apellidos</string>
    <string name="txtPerfilEmail">Email</string>
    <string name="txtPerfilTelefono">Teléfono</string>
    <string name="txtPerfilCuenta">Tipo de cuenta</string>
    <string name="txtPerfilID">ID</string>
    <string name="txtBtnRobo">Robo</string>
    <string name="txtBtnAgresion">Agresion</string>
    <string name="txtBtnDrogas">Venta de drogas</string>
    <string name="txtBtnOtro">Otro delito</string>
    <string name="txtSeccionDenuncias">Sección de delitos</string>
    <string name="txtChooseUser">Usuario</string>
    <string name="txtChooseGuardia">Guardia</string>
    <string name="txtChooseAdmin">Administrador</string>
    <string name="txtTituloChooseUser">¿Qué tipo de Usuario es?</string>
    <string name="imgFondoUser">fondoUser</string>
    <string name="imgFondoGuard">fondoGuard</string>
    <string name="imgFondoAdmin">fondoAdmin</string>
    <string name="txtReportarArea">Área</string>
    <string name="txtReportarDesc">Descripción</string>
    <string name="editTextPistaReporte">Ingrese descripción del crimen</string>
    <string name="btnDenunciar">Denunciar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
