<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@drawable/inicio_sesion">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="303dp"
        android:layout_height="35dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="76dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/txtRegistro"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtMensaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="282dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/rBtnUser" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rBtnGuardia" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextNombres"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextApellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextRepPass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextTelef"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10"
        app:layout_constraintVertical_bias="0.009" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtMensaje2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="52sp"
        android:layout_marginTop="28dp"
        android:text="@string/btnRegistrarse"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/md_white_1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText11" />

</androidx.constraintlayout.widget.ConstraintLayout>