<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:background="@drawable/sesion_bg">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="301dp"
        android:layout_height="31dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/txtRegistro"
        android:textColor="@color/md_white_1000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombres"
        android:layout_width="300dp"
        android:layout_height="34sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextNombres"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="300dp"
        android:layout_height="34sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextApellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombres" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="34sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidos" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="34sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextConfirmPass"
        android:layout_width="300dp"
        android:layout_height="34sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextRepPass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextTelef"
        android:layout_width="300dp"
        android:layout_height="34sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/editTextTelef"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPass" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/md_white_1000"
        android:text="@string/txtMensaje2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="110dp"
        android:layout_height="42sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-black"
        android:text="@string/btnRegistrarse"
        android:textColor="@color/md_white_1000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelef"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtMensajeLogin"
        android:textColor="@color/md_white_1000_75"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/txtRetornoInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtRetornoInicioSesion"
        android:layout_width="88dp"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtIniciaSesion"
        android:textColor="@color/md_yellow_400"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>