<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginGuardiaActivity"
    android:background="@drawable/sesion_bg">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="310dp"
        android:layout_height="40sp"
        android:layout_marginTop="232dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/md_black_1000_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnLoginActivity"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtLogin"
        android:textColor="@color/md_white_1000"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="310dp"
        android:layout_height="40sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/md_black_1000_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/txtApp"
        android:textColor="@color/md_white_1000"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgRetornar"
        android:layout_width="61dp"
        android:layout_height="62dp"
        android:contentDescription="@string/imgRetornar"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472"
        app:srcCompat="@drawable/flecha_regresar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/txtAppObj"
        android:textColor="@color/md_white_1000"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.362" />


</androidx.constraintlayout.widget.ConstraintLayout>