<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sesion_bg"
    >

    <ImageButton
        android:id="@+id/guardian_bttn"
        android:layout_width="108dp"
        android:layout_height="112dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/circle_bttn"
        android:contentDescription="@string/imgFondoGuard"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/user_bttn"
        app:layout_constraintTop_toBottomOf="@+id/user_c"
        app:srcCompat="@drawable/guardian_bttn" />

    <ImageButton
        android:id="@+id/user_bttn"
        android:layout_width="108dp"
        android:layout_height="112dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/circle_bttn"
        android:contentDescription="@string/imgFondoUser"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_c"
        app:srcCompat="@drawable/users_bttn" />

    <TextView
        android:id="@+id/user_c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="Registrarse como:"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#FFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usuario_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtChooseUser"
        android:textColor="@color/md_white_1000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_bttn" />

    <TextView
        android:id="@+id/guardian_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/txtChooseGuardia"
        android:textColor="@color/md_white_1000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/usuario_txt"
        app:layout_constraintTop_toBottomOf="@+id/guardian_bttn" />

    <ImageButton
        android:id="@+id/admin_bttn"
        android:layout_width="108dp"
        android:layout_height="112dp"
        android:background="@drawable/circle_bttn"
        android:contentDescription="@string/imgFondoAdmin"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_bttn"
        app:layout_constraintVertical_bias="0.42000002"
        app:srcCompat="@drawable/admin_bttn" />

    <TextView
        android:id="@+id/admin_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtChooseAdmin"
        android:textColor="@color/md_white_1000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/admin_bttn"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_bttn"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>